Adding power pools and inherents

--- a/index.html
+++ b/index.html
@@ -200,7 +200,9 @@
     <!-- JavaScript Files -->
     <script src="js/data/archetypes.js"></script>
     <script src="js/data/powersets.js"></script>
+    <script src="js/data/inherent-powers.js"></script>
     <script src="js/color-scheme.js"></script>
+    <script src="js/inherent-powers.js"></script>  <!-- ADD THIS -->
     
     <!-- Blaster Primary Powersets (Alphabetical) -->
     <script src="js/data/powersets/blaster/archery.js?v=3"></script>
