a2.5.1 - added warning banner

--- a/index.html
+++ b/index.html
@@ -9,8 +9,27 @@
     <link rel="stylesheet" href="css/main.css">
     <link rel="stylesheet" href="css/stats.css">
     <link rel="stylesheet" href="css/modals.css">
+    <style>
+        .wip-banner {
+            background: linear-gradient(135deg, #7a0353, #a70f74);
+            color: white;
+            padding: 12px 20px;
+            text-align: center;
+            font-size: 14px;
+            font-weight: bold;
+            border-bottom: 3px solid #cc4455;
+            box-shadow: 0 2px 8px rgba(0, 0, 0, 0.2);
+        }
+        .wip-banner span {
+            margin-left: 10px;
+            opacity: 0.9;
+        }
+    </style>
 </head>
 <body>
+    <div class="wip-banner">
+        ⚠️ WORK IN PROGRESS - This application is incomplete and under active development<span>|</span><span>Expect changes and bugs</span><span></span>|<span>Alpha 2.5.1</span>
+    </div>
     <div class="container">
         <!-- Top Panel -->
         <div class="top-panel">
