Alpha 2.6.2 - attemt to fix Userback widget

--- a/index.html
+++ b/index.html
@@ -25,10 +25,19 @@
             opacity: 0.9;
         }
     </style>
+    
+    <!-- Userback Feedback Widget -->
+    <script>
+      window.Userback = window.Userback || {};
+      Userback.access_token = "A-fR9mrfGGc7ZC7WP0pAOccUaJ4";
+      (function(d) {
+        var s = d.createElement('script');s.async = true;s.src = 'https://static.userback.io/widget/v1.js';(d.head || d.body).appendChild(s);
+      })(document);
+    </script>
 </head>
 <body>
     <div class="wip-banner">
-        ⚠️ WORK IN PROGRESS - This application is incomplete and under active development<span>|</span><span>Expect changes and bugs</span><span></span>|<span>Alpha 2.6.1</span>
+        ⚠️ WORK IN PROGRESS - This application is incomplete and under active development<span>|</span><span>Expect changes and bugs</span><span></span>|<span>Alpha 2.6.2</span>
     </div>
     <div class="container">
         <!-- Top Panel -->
@@ -660,13 +669,5 @@
     <script src="js/stats.js"></script>
     <script src="js/accolades.js"></script>
     <script src="js/debug.js"></script>
-    
-    <script>
-      window.Userback = window.Userback || {};
-      Userback.access_token = "A-fR9mrfGGc7ZC7WP0pAOccUaJ4";
-      (function(d) {
-        var s = d.createElement('script');s.async = true;s.src = 'https://static.userback.io/widget/v1.js';(d.head || d.body).appendChild(s);
-      })(document);
-    </script>
 </body>
 </html>
