Implement global enhancement slot management and update UI components

--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
             </div>
             
             <div class="resource-badge">
-                Slots: <span>67/67</span>
+                Slots: <span id="slotCounter">67/67</span>
             </div>
             
             <button class="export-btn" onclick="exportBuild()" style="margin-left: 10px; padding: 6px 12px; background: #4CAF50; color: white; border: none; border-radius: 4px; cursor: pointer; font-size: 12px;">💾 Export Build</button>
