Add power enhancement calculator and integrate into tooltip system

--- a/index.html
+++ b/index.html
@@ -675,6 +675,7 @@
     <script src="js/damage-calculation.js"></script>  <!-- Damage calculation with level tables -->
     <script src="js/ui.js"></script>  <!-- MOVED BEFORE character-creator.js -->
     <script src="js/enhancement-values.js"></script>  <!-- Enhancement value parsing and calculations -->
+    <script src="js/power-enhancement-calculator.js"></script>  <!-- Per-power enhancement calculations -->
     <script src="js/tooltips/unified-tooltips.js"></script>
     <script src="js/tooltips/tooltip-improvements.js"></script>
     <script src="js/character-creator.js"></script>
