Implement fixed info panel for power details and enhance tooltip system with info panel toggle

--- a/index.html
+++ b/index.html
@@ -177,9 +177,25 @@
             <!-- Column D: Pool Powers -->
             <div class="column">
                 <div class="column-header">Pool Powers</div>
-                
+
                 <div class="column-content">
                     <!-- Pool powers will be populated by JavaScript -->
+                </div>
+            </div>
+        </div>
+
+        <!-- Fixed Info Panel -->
+        <div class="info-panel" id="infoPanel">
+            <div class="info-panel-header">
+                <span class="info-panel-title">Power Info</span>
+                <label class="info-panel-toggle">
+                    <input type="checkbox" id="useInfoPanelToggle" checked>
+                    <span>Use Info Panel (disable floating tooltips)</span>
+                </label>
+            </div>
+            <div class="info-panel-content" id="infoPanelContent">
+                <div class="info-panel-placeholder">
+                    <span>Hover over any power to view its details here</span>
                 </div>
             </div>
         </div>
