Refactor info panel layout to integrate as the fifth column and enhance styling for better usability

--- a/index.html
+++ b/index.html
@@ -182,20 +182,20 @@
                     <!-- Pool powers will be populated by JavaScript -->
                 </div>
             </div>
-        </div>
 
-        <!-- Fixed Info Panel -->
-        <div class="info-panel" id="infoPanel">
-            <div class="info-panel-header">
-                <span class="info-panel-title">Power Info</span>
-                <label class="info-panel-toggle">
-                    <input type="checkbox" id="useInfoPanelToggle" checked>
-                    <span>Use Info Panel (disable floating tooltips)</span>
-                </label>
-            </div>
-            <div class="info-panel-content" id="infoPanelContent">
-                <div class="info-panel-placeholder">
-                    <span>Hover over any power to view its details here</span>
+            <!-- Column E: Power Info -->
+            <div class="column info-panel" id="infoPanel">
+                <div class="column-header info-panel-header">
+                    <span>Power Info</span>
+                    <label class="info-panel-toggle">
+                        <input type="checkbox" id="useInfoPanelToggle" checked>
+                        <span>Info Panel</span>
+                    </label>
+                </div>
+                <div class="column-content info-panel-content" id="infoPanelContent">
+                    <div class="info-panel-placeholder">
+                        <span>Hover over any power to view its details here</span>
+                    </div>
                 </div>
             </div>
         </div>
