--- a/index.html
+++ b/index.html
@@ -2,11 +2,11 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/CoH-Planner/img/favicon.svg" />
-    <link rel="icon" type="image/png" sizes="32x32" href="/CoH-Planner/img/favicon-32x32.png" />
-    <link rel="icon" type="image/png" sizes="64x64" href="/CoH-Planner/img/favicon-64x64.png" />
-    <link rel="apple-touch-icon" sizes="256x256" href="/CoH-Planner/img/favicon-256x256.png" />
-    <link rel="manifest" href="/CoH-Planner/manifest.json" />
+    <link rel="icon" type="image/svg+xml" href="img/favicon.svg" />
+    <link rel="icon" type="image/png" sizes="32x32" href="img/favicon-32x32.png" />
+    <link rel="icon" type="image/png" sizes="64x64" href="img/favicon-64x64.png" />
+    <link rel="apple-touch-icon" sizes="256x256" href="img/favicon-256x256.png" />
+    <link rel="manifest" href="manifest.json" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>City of Heroes Planner</title>
     <!-- SPA redirect handler for GitHub Pages -->
