--- a/index.html
+++ b/index.html
@@ -38,14 +38,8 @@
       <span style="margin-right: 8px;">⚠️ WORK IN PROGRESS - This application is incomplete and under active development - expect changes and bugs</span>
       <span style="margin-left: 8px;">🛠️ Last updated: <span id="last-updated">Loading...</span></span>
     </div>
-    <div id="brand-banner" style="background: linear-gradient(135deg, #1a1a2e, #16213e); color: white; padding: 16px 20px; text-align: center; border-bottom: 2px solid #0f3460; box-shadow: 0 4px 12px rgba(0, 0, 0, 0.3);">
-      <div style="display: flex; align-items: center; justify-content: center; gap: 16px;">
-        <img src="img/favicon.svg" alt="Sidekick Logo" style="width: 48px; height: 48px;" />
-        <div style="text-align: left;">
-          <div style="font-size: 28px; font-weight: bold; letter-spacing: 2px; color: #d045e9;">SIDEKICK</div>
-          <div style="font-size: 14px; color: #a8b2d1; font-weight: normal; letter-spacing: 0.5px;">A City of Heroes Character Planner for Everyone</div>
-        </div>
-      </div>
+    <div id="brand-banner" style="background: linear-gradient(135deg, #1a1a2e, #16213e); color: white; padding: 0; text-align: center; border-bottom: 2px solid #0f3460; box-shadow: 0 4px 12px rgba(0, 0, 0, 0.3); height: 100px;">
+      <img src="img/sidekick-banner.svg" alt="Sidekick Banner" style="display: block; margin: 0 auto; max-width: 100%; height: 100%;" />
     </div>
     <div id="root"></div>
     <script type="module" src="/src/main.tsx"></script>
