adjust banner height

--- a/index.html
+++ b/index.html
@@ -38,8 +38,8 @@
       <span style="margin-right: 8px;">⚠️ WORK IN PROGRESS - This application is incomplete and under active development - expect changes and bugs</span>
       <span style="margin-left: 8px;">🛠️ Last updated: <span id="last-updated">Loading...</span></span>
     </div>
-    <div id="brand-banner" style="background: linear-gradient(135deg, #1a1a2e, #16213e); color: white; padding: 0; text-align: center; border-bottom: 2px solid #0f3460; box-shadow: 0 4px 12px rgba(0, 0, 0, 0.3); height: 100px;">
-      <img src="img/sidekick-banner.svg" alt="Sidekick Banner" style="display: block; margin: 0 auto; max-width: 100%; height: 100%;" />
+    <div id="brand-banner" style="background: linear-gradient(135deg, #1a1a2e, #16213e); color: white; padding: 0; text-align: center; border-bottom: 2px solid #0f3460; box-shadow: 0 4px 12px rgba(0, 0, 0, 0.3); height: 60px;">
+      <img src="img/sidekick-banner.svg" alt="Sidekick Banner" style="display: block; margin: 0 auto; max-width: 100%; height: 60px;" />
     </div>
     <div id="root"></div>
     <script type="module" src="/src/main.tsx"></script>
