--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     <!-- Buy Me a Coffee Widget -->
     <script data-name="BMC-Widget" data-cfasync="false" src="https://cdnjs.buymeacoffee.com/1.0.0/widget.prod.min.js"
       data-id="Wednesdaywoe" data-description="Support me on Buy me a coffee!" data-message="I'm fueled by espresso,
-      thank you for enabling me" data-color="#BD5FFF" data-position="Right" data-x_margin="18" data-y_margin="80">
+      thank you for enabling me" data-color="#BD5FFF" data-position="Left" data-x_margin="18" data-y_margin="18">
     </script>
     <!-- Userback Feedback Widget -->
     <script>
