--- a/index.html
+++ b/index.html
@@ -41,7 +41,34 @@
     <div id="brand-banner" style="background: linear-gradient(135deg, #1a1a2e, #16213e); color: white; padding: 0; text-align: center; border-bottom: 2px solid #0f3460; box-shadow: 0 4px 12px rgba(0, 0, 0, 0.3); height: 60px;">
       <img src="img/sidekick-banner.svg" alt="Sidekick Banner" style="display: block; margin: 0 auto; max-width: 100%; height: 60px;" />
     </div>
-    <div id="root"></div>
+    <div id="root">
+      <!-- Loading screen - replaced when React mounts -->
+      <div id="loading-screen" style="
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
+        min-height: calc(100vh - 120px);
+        background: #0f172a;
+        color: #94a3b8;
+        font-family: system-ui, -apple-system, sans-serif;
+      ">
+        <div style="
+          width: 48px;
+          height: 48px;
+          border: 3px solid #1e293b;
+          border-top-color: #3b82f6;
+          border-radius: 50%;
+          animation: spin 1s linear infinite;
+        "></div>
+        <p style="margin-top: 16px; font-size: 14px;">Loading City of Heroes Planner...</p>
+      </div>
+      <style>
+        @keyframes spin {
+          to { transform: rotate(360deg); }
+        }
+      </style>
+    </div>
     <script type="module" src="/src/main.tsx"></script>
   </body>
 </html>
