--- a/index.html
+++ b/index.html
@@ -19,11 +19,8 @@
         }
       })();
     </script>
-    <!-- Buy Me a Coffee Widget -->
-    <script data-name="BMC-Widget" data-cfasync="false" src="https://cdnjs.buymeacoffee.com/1.0.0/widget.prod.min.js"
-      data-id="Wednesdaywoe" data-description="Support me on Buy me a coffee!" data-message="I'm fueled by espresso,
-      thank you for enabling me" data-color="#BD5FFF" data-position="Left" data-x_margin="18" data-y_margin="18">
-    </script>
+    <!-- Buy Me a Coffee Widget - Bottom Left -->
+    <script data-name="BMC-Widget" data-cfasync="false" src="https://cdnjs.buymeacoffee.com/1.0.0/widget.prod.min.js" data-id="Wednesdaywoe" data-description="Support me on Buy me a coffee!" data-message="I'm fueled by espresso, thank you for enabling me" data-color="#BD5FFF" data-position="left" data-x_margin="18" data-y_margin="18"></script>
     <!-- Userback Feedback Widget -->
     <script>
       window.Userback = window.Userback || {};
