replace Userback widget with a custom feedback widget

--- a/index.html
+++ b/index.html
@@ -20,14 +20,9 @@
       })();
     </script>
     <!-- Buy Me a Coffee Widget - Bottom Left -->
-    <script data-name="BMC-Widget" data-cfasync="false" src="https://cdnjs.buymeacoffee.com/1.0.0/widget.prod.min.js" data-id="Wednesdaywoe" data-description="Support me on Buy me a coffee!" data-message="I'm fueled by espresso, thank you for enabling me" data-color="#BD5FFF" data-position="left" data-x_margin="18" data-y_margin="18"></script>
-    <!-- Userback Feedback Widget -->
-    <script>
-      window.Userback = window.Userback || {};
-      Userback.access_token = "A-fR9mrfGGc7ZC7WP0pAOccUaJ4";
-      (function(d) {
-        var s = d.createElement('script');s.async = true;s.src = 'https://static.userback.io/widget/v1.js';(d.head || d.body).appendChild(s);
-      })(document);
+    <script data-name="BMC-Widget" data-cfasync="false" src="https://cdnjs.buymeacoffee.com/1.0.0/widget.prod.min.js" 
+    data-id="Wednesdaywoe" data-description="Support me on Buy me a coffee!" data-message="I'm fueled by espresso, thank you
+    for enabling me" data-color="#BD5FFF" data-position="left" data-x_margin="18" data-y_margin="18">
     </script>
   </head>
   <body>
