--- a/index.html
+++ b/index.html
@@ -19,6 +19,12 @@
         }
       })();
     </script>
+    <!-- Loading spinner animation -->
+    <style>
+      @keyframes spin {
+        to { transform: rotate(360deg); }
+      }
+    </style>
     <!-- Buy Me a Coffee Widget - Bottom Left -->
     <script data-name="BMC-Widget" data-cfasync="false" src="https://cdnjs.buymeacoffee.com/1.0.0/widget.prod.min.js" 
     data-id="Wednesdaywoe" data-description="Support me on Buy me a coffee!" data-message="I'm fueled by espresso, thank you
@@ -55,11 +61,6 @@
         "></div>
         <p style="margin-top: 16px; font-size: 14px;">Loading City of Heroes Planner...</p>
       </div>
-      <style>
-        @keyframes spin {
-          to { transform: rotate(360deg); }
-        }
-      </style>
     </div>
     <script type="module" src="/src/main.tsx"></script>
   </body>
